# CSE168tonemapping

./: .1201z87wijhhn3039755611~  .15hi1j2ng0obm3980736365~  .166my8wlwz5oh2054987582~  .1ch5ojgvve9641658970072~  .1e9tcd5wktq4s4234831870~  .1f29xu0x8u40w1472309321~  .1l1ezbakb10xf3109027512~  .1lnd8k4t3h3o73738893609~  .1qy0cfzlath5a2020155862~  .1tlzyp42jecod1244498315~  .1xre8bmfgurgv867803574~  .1yb9z9rdao0o3197497756~  .1yj0cgtp1biw02120081960~  .1z8vwccf0jboe957652057~  .1zrtn60ee3t2w1971889027~  .21qcpv0m5w1yf938048879~  .25val97avbdr2287867390~  .28usqypzl1scx2369733616~  .29n0mqxw6y9ko1753031538~  .2aacj7r9u1oye3209958337~  .2ag2jf6pekq5g2579373933~  .2bi76c3fklpbe1367058623~  .2cngxqd26ex6a4118800778~  .2d7oj0a0cnydo418700444~  .2dwumo6l2tjk81038311786~  .2fkygq5c9m7g93864109827~  .2ftnaa6bdhqns1332335590~  .2fx2s1zesn1tc3324970854~  .2gw2dbhg3tup71444277260~  .2kc08nt7lfa6x694556361~  .2kvv9sc2uspjw624687171~  .2nw14ssk9m9us348796178~  .2pmqnr7006o4o648165246~  .2px8t5p7ynpnw2998702214~  .2reuw0esdpe7m1567932965~  .2segqt333k5ov1438485400~  .2ucu33yrdmtgo826927694~  .2v5sr9no3l1ht2568295282~  .2y2kg48x2l2z12149080291~  .31yevgab6qbtg391501949~  (+34 more)
.ccls-cache/@@home@runner@CSE168tonemapping/: @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@algorithm.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@array.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@atomic.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@backward@binders.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bit.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@algorithmfwd.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@alloc_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@allocator.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@atomic_base.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@atomic_lockfree_defines.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_ios.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@basic_string.tcc.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@char_traits.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@charconv.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@codecvt.h.blob  @nix@store@1gf2flfqnpqbr1b4p4qz2f72y42bs56r-gcc-11.3.0@include@c++@11.3.0@bits@concept_check.h.blob  (+222 more)
final/: CMakeLists.txt  FindFFTW3.cmake  README.md
final/BILATERAL_FILTER/: CMakeLists.txt  Makefile  bilateral_filter  bilateral_filter.cpp  bilateral_filter_unittest.cc
final/BILATERAL_FILTER/fft_3D/: convolution_3D.h  support_3D.h
final/BILATERAL_FILTER/include/: array.h  image.h  linear_bf.h  math_tools.h
final/BILATERAL_FILTER/include/fft_3D/: CMakeLists.txt  support_3D.cpp  support_3D.h
final/COLOR_BILATERAL_FILTER/: CMakeLists.txt  Makefile  README.txt  color_bilateral_filter  color_bilateral_filter.cpp  filter.sh
final/COLOR_BILATERAL_FILTER/include/: array.h  color_bilateral_filter.h  fast_color_bf.h  math_tools.h
final/CROSS_BILATERAL_FILTER 2/: cross_bilateral_filter  cross_bilateral_filter.cpp
final/CROSS_BILATERAL_FILTER 2/include/: fast_lbf.h
final/LogMap/: CMakeLists.txt  Makefile  color_convert.cpp  log_filter.sh  log_tone.cpp  log_tone.h  logmapping.cpp  logmapping.h  rgbe.cpp  rgbe.h
final/LogMap 2/: Makefile  color_convert.c  color_convert.h  logmap  logmapping.c  logmapping.h  rgbe.c  rgbe.h  tone_main.c  tone_main.h
final/LogMap 2/after/: AtriumMorning_after.hdr  AtriumNight_after.hdr  BigI_smal_after.hdr
final/LogMap/include/: color_convert.h  image.h  log_SCENE.h  log_tone.h  logmapping.h  rgbe.h
final/LogMap/ori/: AtriumNight.hdr
final/TONEMAP1/: CMakeLists.txt  tonemap1.cpp
final/TONEMAP1/include/: tonemap1.h
final/TONEMAP2/: CMakeLists.txt  README.txt  bilateral_filter.cpp  bilateral_filter_unittest.cc  tonemapping2.cpp
final/TONEMAP2/include/: bilateral_filter.h  fft_3D.h  linear_bf.h  load_EXR.h  tonemapping2.h  torrey.h  vector.h
final/TONEMAP2/include/fft_3D/: Makefile  convolution_3D.h
final/TONEMAP2_ori/: CMakeCache.txt  CMakeLists.txt  Makefile  README.txt  bath_r3000_1000.exr  bath_r3000_1000_tone2ori.exr  cmake_install.cmake  tone2ori  tone_mapping.cpp
final/TONEMAP2_ori/include/: Makefile  cmake_install.cmake  fft_3D.h  linear_bf.h  load_EXR.h
final/TONEMAP2_ori/include/fft_3D/: CMakeLists.txt  Makefile  cmake_install.cmake
final/TRUNCATED_KERNEL_BF/: truncated_kernel_bf
final/TRUNCATED_KERNEL_BF 2/: truncated_kernel_bf.cpp
final/TRUNCATED_KERNEL_BF/include/: fast_lbf.h
final/include/: bbox.h  bvh.h  hwfinalproject.h  material.h  matrix.h  pdf.h  scene.h  shape.h
final/src/: CMakeCache.txt  Makefile  array.h  bilateral_filter.cpp  bilateral_filter.h  bvh.cpp  bvh.h  cmake_install.cmake  color_bilateral_filter.cpp  color_bilateral_filter.h  error.txt  fin1_test.sh  fin2_deb.sh  fin2_test.sh  geom.h  hw1.cpp  hw3.cpp  hw3.h  hw4.cpp  hw4.h  hw_2_5.exr  hw_3_1.exr  hw_3_3.exr  hw_3_4.exr  hw_4_1.exr  hw_4_2.exr  hw_4_3.exr  hw_fin_1.exr  hw_fin_2.exr  hw_fin_3.exr  hw_s.exr  hwfinalproject.cpp  hwfinalproject.h  image.cpp  intersection.h  linear_bf.h  log_tone.cpp  logmapping.cpp  main.cpp  material.cpp  (+9 more)
final/src/fft_3D/: convolution_3D.h  support_3D.h
final/src/parse/: CMakeLists.txt  parse_scene.cpp
final/src/parse/include/: parse_scene.h
final/unittest/: pdf_unittest.cpp  radiance_unittest.cpp  shape_unittest.cpp  tonemap1_unittest.cpp  tonemap_unittest.cpp
(+64 files in other folders)
